# wildcat

./: LICENSE  README.md  wildcat.cabal
src/: Wildcat.hs
test/: Main.hs  WildcatTest.hs
