name:                wildcat
version:             0.1.0.0
synopsis:            Wildcat, a concatenative programming language.
description:         Please see README.md
homepage:            https://github.com/henry-nazare/wildcat-hs
license:             MIT
license-file:        LICENSE
author:              Henrique Nazaré
copyright:           2017 Henrique Nazaré Santos
maintainer:          henrique.nazare.santos@gmail.com
category:            Programming languages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Wildcat
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite wildcat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base, wildcat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/henry-nazare/wildcat-hs
